Adjusted margin slightly to prevent scrollbar, probably need a better fix
I know I’m not supposed to be editing. Showing it to someone so wanted
to fix this quickly. Will put in a ticket for a better solution.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3667,7 +3667,7 @@ body.is-ie #sidebar > .inner {
 
     #sidebar .nav-image img {
         width: 75%;
-        margin: 10% 0 20% 0;
+        margin: 10% 0 15% 0;
     }
 
 #sidebar nav > ul {
